[package]
name = "msp430fr2476"
version = "0.1.0"
edition = "2021"
authors = ["Enmanuel Parache <enmanuelparache@gmail.com"]
repository = "https://github.com/EnmanuelParache/msp430fr2476"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version = "1.0", optional = true }
msp430 = "0.4.0"
msp430-rt = { version = "0.4.0", optional = true }
vcell = "0.1.0"

[features]
rt = ["msp430-rt/device"]
